# IXPLORE

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: binary_reactions.csv  binary_statements.csv  likert_reactions.csv  likert_statements.csv  pretrained_embedding.csv  pretrained_models.csv  synthetic_users.csv
ixplore/: __init__.py  algorithm.py  logger.py  utils.py  visualization.py
notebooks/: readme.ipynb  simulation.ipynb
tests/: test_embedding.py
