[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ixplore"
version = "0.1.4"
description = "Iterative Probabilistic Logistic Regression Embedding"
authors = [
    {name = "Fynn Bachmann", email = "fynn.bachmann@uzh.ch"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["political data", "machine learning", "dimensionality reduction", "spatial modeling", "logistic regression", "item response theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "scipy",
]

[project.urls]
Homepage = "https://fynnbachmann.com"
Repository = "https://github.com/fsvbach/ixplore"

[tool.setuptools.packages.find]
where = ["."]
include = ["ixplore*"]